--- a/src/assets/scss/material-kit/_layout.scss
+++ b/src/assets/scss/material-kit/_layout.scss
@@ -2,3 +2,11 @@
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.md-show {
+  visibility: visible;
+}
+
+.md-hidden {
+  visibility: hidden;
+}
